deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: passly-ingress
  namespace: passly

spec:
  ingressClassName: nginx

  rules:
  - host: passly.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: passly-frontend-service
            port:
              number: 80

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: passly-backend-service
            port:
              number: 3000
